# cmark-beef

./: .gitmodules  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build.sh  build.ts  build_libs.bat
example/: BeefProj.toml
example/src/: Program.bf
libs/debug/: cmark.lib
libs/release/: cmark.lib
libs/windows/: cmark.lib  cmarkd.lib
libs/windows/x64/: cmark.lib  cmark_d.lib
src/: cmark.bf
